--- a/index.html
+++ b/index.html
@@ -6,31 +6,35 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Work</li>
-      <li>Team</li>
-      <li>Contact</li>
-    </ul>
+    <div class="heading">
+      <h1>Broadway Design</h1>
+      <p><a class="nav" href="#">Home</a></p>
+      <p><a class="nav" href="about">About</a></p>
+      <p><a class="nav" href="work">Work</a></p>
+      <p><a class="nav" href="team">Team</a></p>
+      <p><a class="nav" href="contact">Contact</a></p>
+    </div>
     <h2>Our Process</h2>
-    <img src href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
     <h3>Identify</h3>
     <p>We focus on the most important details</p>
-    <img src href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
-    <img src href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
     <h3>Execute</h3>
     <p>We put everything we have into our work</p>
-    <h3>Designed in New York</h3>
+    <div class="banner">
+      <h3>Designed in New York</h3>
+    </div>
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
     <h3>Team</h3>
     <p>We're Hiring!</p>
     <h3>Contact</h3>
-    <p>Phone: (555)-555-5555<br />E-mail: test@example.com<br />Twitter: @test</p>
+    <p>Phone: (555)-555-5555</p>
+    <p>E-mail: test@example.com</p>
+    <p>Twitter: @test</p>
     <div class="footer">
       <p>&copy Broadway 2016 Home About Work Team Contact</p>
     </div>
