--- a/index.html
+++ b/index.html
@@ -6,37 +6,45 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="heading">
-      <h1>Broadway Design</h1>
-      <p><a class="nav" href="#">Home</a></p>
-      <p><a class="nav" href="about">About</a></p>
-      <p><a class="nav" href="work">Work</a></p>
-      <p><a class="nav" href="team">Team</a></p>
-      <p><a class="nav" href="contact">Contact</a></p>
+    <div class="main">
+      <div class="heading">
+        <h1>Broadway Design</h1>
+        <p><a class="nav" href="#">Home</a></p>
+        <p><a class="nav" href="about">About</a></p>
+        <p><a class="nav" href="work">Work</a></p>
+        <p><a class="nav" href="team">Team</a></p>
+        <p><a class="nav" href="contact">Contact</a></p>
+      </div>
+      <h2>Our Process</h2>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+      <div class="banner">
+        <h3>Designed in New York</h3>
+      </div>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
     </div>
-    <h2>Our Process</h2>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
-    <h3>Identify</h3>
-    <p>We focus on the most important details</p>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
-    <h3>Execute</h3>
-    <p>We put everything we have into our work</p>
-    <div class="banner">
-      <h3>Designed in New York</h3>
-    </div>
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>E-mail: test@example.com</p>
-    <p>Twitter: @test</p>
     <div class="footer">
-      <p>&copy Broadway 2016 Home About Work Team Contact</p>
+      <p>&copy Broadway 2016
+        <a class="footer" href="#">Home</a>
+        <a class="footer" href="about">About</a>
+        <a class="footer" href="work">Work</a>
+        <a class="footer" href="team">Team</a>
+        <a class="footer" href="contact">Contact</a>
+      </p>
     </div>
   </body>
 </html>
